# food_delivery_data_integration_and_analysis

./: .env.example  .gitignore  AI_USAGE_REPORT.md  README.md  TASK4_IMAGE_PROCESSING.md  TECH_ASSESSMENT_EXCLUDED.md  TECH_ASSESSMENT_REVIEW.md  WRITEUP.md  pyproject.toml  requirements.txt  run_pipeline.sh
scripts/: check_columns.py  merge_venues.py
source/: food_categories.xlsx  just_eat_urls.json  just_eat_venue_example.json
src/: config.py  validators.py
src/api/: main.py
src/api/static/: index.html
src/dashboard/: index.html
src/database/: init_db.py
src/engine/: classifier.py  classifier_orchestrator.py  er_engine.py  image_processing_results_sample.md  image_processor.py  main.py  matcher.py  menu_extractor.py  venue_loader.py
src/scraper/: crawler.py  main.py  models.py  persistence.py
src/scripts/: split_venues.py
tests/: setup_test_db.py  test_api_venues.py  test_classifier.py  test_classifier_export.py  test_classifier_fallback.py  test_classifier_reclassification.py  test_cli_validation.py  test_config_paths.py  test_crawler_utils.py  test_db_init.py  test_er_edge_cases.py  test_er_engine.py  test_image_processor.py  test_image_processor_metrics.py  test_jsonld_extraction.py  test_matcher.py  test_matcher_city_blocking.py  test_matcher_unmatched.py  test_merge_venues.py  test_parse_price_locale.py  test_persistence_model.py  test_pipeline_integration.py  test_price_parsing_locale.py  test_scraper.py  test_scraper_url_validation.py  test_venue_id_extraction.py
