[project]
name = "food-delivery-pipeline"
version = "0.1.0"
description = "Food Delivery Data Integration and Analysis Pipeline"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "rapidfuzz",
    "sentence-transformers",
    "opencv-python",
    "pandas",
    "openpyxl",
    "sqlalchemy",
    "playwright",
    "python-dotenv",
    "pillow",
    "scikit-learn",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
ml = [
    "torch",
    "transformers",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
