[project]
name = "food-delivery-pipeline"
version = "0.1.0"
description = "Food Delivery Data Integration and Analysis Pipeline"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "rapidfuzz",
    "sqlalchemy",
    "python-dotenv",
    "playwright",
    "pandas",
    "numpy",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
ml = [
    "torch",
    "transformers",
    "pillow",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
